force-app/main/default/objects/FEC_Bank_Branch__c/FEC_Bank_Branch__c.object-meta.xml
<CustomObject>
    <description>Danh sách chi nhánh ngân hàng</description>
    <label>Bank Branch</label>
    <nameField>
        <displayFormat>BB - {0}</displayFormat>
        <label>Bank Branch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Branches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>