force-app/main/default/objects/FEC_Bank_Branch__c/fields/FEC_Bank_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Bank_Branch_Name__c</fullName>
    <description>Tên chi nhánh ngân hàng</description>
    <label>Bank Branch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>