force-app/main/default/objects/FEC_Bank_Branch__c/fields/FEC_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Bank_Name__c</fullName>
    <label>Bank Name</label>
    <referenceTo>FEC_Bank_Name__c</referenceTo>
    <relationshipLabel>Bank Branches</relationshipLabel>
    <relationshipName>Bank_Branches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>